# SmartFridge

./: README.md  build_project.sh  credentials.env.sample  picam_server.py  replace.py  run_project.sh  schema.sql
smart-fridge-web/: .env  .gitignore  alerts.db  package-lock.json  package.json  recipe.py
smart-fridge-web/backend/: npm  package-lock.json  package.json  recipes.db  server.js  smart-fridge.db
smart-fridge-web/server/: index.js
smart-fridge-web/src/: App.js
smart-fridge-web/src/components/: NavigationBar.css  NavigationBar.js  QuaggaScanner.js  scanFridge.js
smart-fridge-web/src/context/: AlertsContext.js  BarcodesContext.js  ItemsContext.js  RecipesContext.js  ShoppingListContext.js
smart-fridge-web/src/pages/: AlertsPage.js  BarcodeScannerPage.js  HomePage.js  ItemsPage.js  RecipesPage.js  SettingsPage.js  ShoppingListPage.js
smart-fridge-web/src/pages/styles/: AlertsPage.css  BarcodeScannerPage.css  HomePage.css  ItemsPage.css  RecipesPage.css  SettingsPage.css  ShoppingListPage.css
smart_fridget1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow_test.cpp
